plugins {
    id 'java'
    id 'maven'
    id 'org.flywaydb.flyway' version '6.0.3'
    id 'war'
}

description = """http for authentication"""

sourceCompatibility = 12
targetCompatibility = 12

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}


repositories {
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    maven { url "https://oss.sonatype.org/content/repositories/releases" }
    maven { url "https://repo.maven.apache.org/maven2" }
    mavenCentral()
    mavenLocal()
}

ext {
    servletApiVersion = '4.0.1'

    mainClass = 'net.tokensmith.authorization.http.server.TokenSmithServer'
    pathToJavaMain = "$buildDir/classes/java/main/"
}


dependencies {
    compile project (':core')

    compile group: 'javax.servlet', name: 'javax.servlet-api', version: "${servletApiVersion}"
    compile group: 'net.tokensmith', name: 'otter', version: "${otterVersion}"
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jacksonVersion}"
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
    compile group: 'org.springframework', name: 'spring-context', version: "${springVersion}"
    compile(group: 'org.springframework', name: 'spring-jdbc', version: "${springVersion}") {
        exclude(module: 'commons-logging')
    }

    // what is ths used for?
    // compile(group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot', version: '1.3.1-SNAPSHOT')

    compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: "${log4jVersion}"
    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4jVersion}"
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4jVersion}"
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
    compile group: 'org.slf4j', name: 'slf4j-simple', version: "${slf4jVersion}"
    compile group: 'net.tokensmith', name: 'jwt', version: "${jwtVersion}"
    compile 'commons-httpclient:commons-httpclient:3.1'

    testCompile group: 'junit', name: 'junit', version:"${jUnitVersion}"
    testCompile group: 'org.mockito', name: 'mockito-core', version:"${mockitoVersion}"
    testCompile group: 'com.ning', name: 'async-http-client', version:'1.9.15'
}

test {
    mkdir 'logs/jetty'
    filter {
        includeTestsMatching "*IntegrationTestSuite"
        includeTestsMatching "*UnitTestSuite"
    }
}

configurations {
    executableWarDeps
}

war {
    from "${pathToJavaMain}"
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    with jar
    manifest {
        attributes 'Main-Class': "${mainClass}"
    }
    from {
        configurations.executableWarDeps.collect { it.isDirectory() ? it : project.zipTree(it) }
    }
    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
    // having trouble exploding the war file.
    exclude "license/LICENSE*.txt"
    exclude "license/README*.txt"

}
